<resources>
    <string name="app_name">FprintMA</string>
    <string name="ma_dlg_warn">Warnning</string>
    <string name="ma_dlg_error">Error</string>
    <string name="ma_dlg_yes">Confirm</string>
    <string name="ma_dlg_no">Cancel</string>
    <string name="ma_dlg_device">Open device failed.</string>
    <string name="ma_dlg_memory">Memory not enough</string>
    <string name="ma_dlg_chmodd">Chmod device failed.</string>
    <string name="ma_dlg_del_touch">Are you sure delete the finger？</string>
    <string name="ma_dlg_dbase">Open DB failed.</string>
    <string name="ma_dlg_table">Open table failed.</string>
    <string name="ma_dlg_force_stop">Are you sure force stop？</string>
    <string name="ma_dlg_capture_fail">Capture failed.</string>
    <string name="ma_dlg_save_fail">Save data failed.</string>
    <string name="ma_dlg_load_data_fail">Load data failed.</string>
    <string name="ma_dlg_load_temp_fail">Load temp failed.</string>
    <string name="ma_dlg_finger_full">Fingerprint is full</string>
    <string name="ma_dlg_not_data">no finger data,please enroll your finger</string>
    <string name="ma_dlg_not_capture">Not found capture data</string>
    <string name="ma_settings">Settings</string>
    <string name="ma_set_finger_title">TouchID</string>
    <string name="ma_set_finger_use">TouchID use:</string>
    <string name="ma_set_finger_unlock">iPhone unlock</string>
    <string name="ma_set_finger_calibrate">Fprint calibrate</string>
    <string name="ma_set_finger_add">Add finger</string>
    <string name="ma_set_app_lock">App lock</string>
    <string name="ma_set_finger_capture">Capture</string>
    <string name="ma_set_finger_please_calibrate">please calibration</string>
    <string name="ma_enroll_add_finger">Add Finger</string>
    <string name="ma_enroll_finger">Enroll Finger</string>
    <string name="ma_enroll_cancel">Cancel</string>
    <string name="ma_enroll_alter">Alter area</string>
    <string name="ma_enroll_fid">Finger</string>
    <string name="ma_enroll_succ">Enroll successed</string>
    <string name="ma_enroll_fail">Enroll failed</string>
    <string name="ma_enroll_place">Place your Finger</string>
    <string name="ma_enroll_lift">Lift your Finger</string>
    <string name="ma_enroll_repeat">Lift and reset your finger on the Home button repeatedly.</string>
    <string name="ma_enroll_adjust">Shake hands posture adjustment</string>
    <string name="ma_enroll_go_obtain">Continue to adjust, obtaining fingerprint edge</string>
    <string name="ma_enroll_go_on">Continue</string>
 <string name="ma_factory_title">Factory capture</string>
    <string name="ma_factory_prompt">Don\'t touch finger print</string>
    <string name="ma_factory_capture_start">Capture start</string>
    <string name="ma_factory_wait">Please wait...</string>
    <string name="ma_factory_capture_stop">Capture end</string>
    <string name="ma_factory_progress">progress(%):</string>
    <string name="ma_factory_begin">Ready for Factory capture,Please lift your finger</string>
    <string name="ma_factory_turn_to_capture_page">Begin Capture Test</string>
    <string name="ma_factory_capture_begin">Factory Capture Begining,Please wait.....</string>
	<string name="ma_fprint_open_neg1">open device failed</string>
    <string name="ma_fprint_open_neg2">memory short of </string>
    <string name="ma_fprint_open_neg3">open database failed</string>
    <string name="ma_fprint_open_neg4">creat table failed</string>
    <string name="ma_fprint_initfactory_neg1">memory short of</string>
    <string name="ma_fprint_initfactory_neg2">capture data failed</string>
    <string name="ma_fprint_initfactory_neg3">store data failed</string>
    <string name="ma_fprint_initfactory_neg4">load data failed</string>
    <string name="ma_fprint_initfactory_neg5">SPI comunication failed</string>
    <string name="ma_fprint_initboot_neg1">no initial data</string>
    <string name="ma_fprint_initboot_neg2">load data failed</string>
    <string name="ma_fprint_initboot_neg3">SPI comunication failed</string>
    <string name="ma_capture_tip_init">Put your finger on the Home button to detecte performance</string>
    <string name="ma_capture_title">Image capture</string>
    <string name="ma_fprint_match_msg_pre">match failed</string>
    <string name="ma_fprint_match_msg_sub">please use password to unlock</string>
    <string name="fp_name">fingerprint</string>
    <string name="rename">rename</string>
    <string name="delete">delete</string>
    <string name="finish">finish</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_name_warning">New name can\'t be empty!</string>
    <string name="fp_detail_delete">Delete The Fingerprint?</string>
    <string name="ma_fprint_finger_default_name">finger</string>
    <string name="lockui_title">App lock</string>
    <string name="fingerprint_pwd">Password</string>
    <string name="fingerprint_add">New Finger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_password">Enter your passcode</string>
    <string name="input_old_password">Enter your old passcode</string>
    <string name="input_new_password">Enter your new passcode</string>
    <string name="input_new_password_again">Re-enter your new passcode</string>
    <string name="input_other_password">Enter a different passcode.Cannot re-use the same passcode</string>
    <string name="wrong_passworegister_titlerd">Failed Passcode Attempt</string>
    <string name="password_keyboard_1">1</string>
    <string name="password_keyboard_2">2</string>
    <string name="password_keyboard_3">3</string>
    <string name="password_keyboard_4">4</string>
    <string name="password_keyboard_5">5</string>
    <string name="password_keyboard_6">6</string>
    <string name="password_keyboard_7">7</string>
    <string name="password_keyboard_8">8</string>
    <string name="password_keyboard_9">9</string>
    <string name="password_keyboard_0">0</string>
    <string name="password_keyboard_c">&lt;-</string>
    <string name="password_not_equal_pre">Passcodes did not match,Try again</string>
    <string name="preferences_title_text">Fingerprint Passcode</string>
    <string name="preferences_need_password">Require Passcode</string>
    <string name="preferences_need_password_sub">Enter fingerprint setting need passcode</string>
    <string name="preferences_lockscreen_password">Lockscreen Passcode</string>
    <string name="preferences_lockscreen_password_sub">Unlock Screen need passcode</string>
    <string name="preferences_more">></string>
    <string name="input_password_title">Password</string>
    <string name="preferences_close_password">Turn Passcode Off</string>
    <string name="preferences_open_password">Turn Passcode On</string>
    <string name="touchid_add_new_fingerprint">Add a Fingerprint</string>
    <string name="capture_put_finger_on">Place Your Finger</string>
    <string name="capture_notice_put_on_screen">Lift and rest the %1$s of your finger repeatedly.</string>
    <string name="capture_notice_put_on_screen_outside">Lift and rest the %1$s of your finger repeatedly.</string>
    <string name="center_area">center area</string>
    <string name="outside_area">edge area</string>
    <string name="default_fingerprint_description">Default fingerprint description</string>
    <string name="title_activity_lockscreen">LockscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lock_screen_match_fingerpring"> Recognize</string>
    <string name="touch_id">Fingerprint manager</string>
    <string name="add_fingerprint">Add a Fingerprint.</string>
    <string name="password_change_password">Change Passcode</string>
    <string name="preferences_now">Immediately ></string>
    <string name="test_devices">Device</string>
    <string name="test_baudrate">Baudrate</string>
    <string name="preferences_on">Open</string>
    <string name="preferences_off">Close</string>
    <string name="serial_port_title">Baudrate</string>
    <string name="china_unicom">China unicom</string>
    <string name="china_mobile">China mobile</string>
    <string name="china_telecom">China telecom</string>
    <string name="china_unknown">unknown</string>
    <string name="china_nosim">No Sim</string>
    <string name="lock_screen_mismatch">Mismatching</string>
    <string name="lockscreen_click_unlock">Click screen</string>
    <string name="lockscreen_verify_failed">Please try again!</string>
    <string name="lockscreen_no_enroll">no available fingerprint</string>
    <string name="fingerprint_manager">Fingerprint manager</string>
    <string name="fingerprint_manager_sub">Register &amp; Manager</string>
    <string name="wrong_password">Wrong password</string>
    <string name="register_title">Register</string>
    <string name="register_touchhomekey">Place Your Finger</string>
    <string name="register_notice_content_one">Touch the center area to enroll your fingerprint.Make sure to cover valid area and that your finger is dry.</string>
    <string name="register_dialog_key_good">Ok</string>
    <string name="register_notice_the_hand">Lift Your Finger</string>
    <string name="register_register_failed">Failed</string>
    <string name="register_notice_title_keeptouch">Keep Finger on center area</string>
    <string name="register_notice_keeptouch">Don\'t lift until you feel a vibration.</string>
    <string name="register_change_catch_style">Adjust Your Grip</string>
    <string name="register_get_slide_fingerprint">Keep going to capture the edges of your print.</string>
    <string name="register_register_complete">Complete</string>
    <string name="register_complete_infomation">Touch ID is ready.Your print can be used for unlocking your Phone.</string>
    <string name="register_notice">Move Finger</string>
    <string name="register_notice_steady">Keep Finger Steady</string>
    <string name="register_notiece_steady_content">Keep Finger on the Home Button Until Asked to Lift</string>
    <string name="register_no_piece_together">Don\'t move your finger too much between scans.</string>
    <string name="register_no_move">Move your finger slightly between scans.</string>
    <string name="register_no_standby">Don\'t lift until you feel a vibration.</string>
    <string name="about_ok">Ok</string>
    <string name="about">About me</string>
    <string name="register_continue">Continue</string>
    <string name="testapi_check_password">checkPWD</string>
    <string name="testapi_change_password">changePWD</string>
    <string name="record_fp_content_remove_first">Please lift your finger after pressing</string>
    <string name="record_fp_content_remove">Please raise your finger</string>
    <string name="record_fp_title_positive">Please enter the fingerprint positive</string>
    <string name="record_fp_content_first_positive">Place the finger on the back of the center of the sensing area.</string>
    <string name="fingerprint_mag">Fingerprint management</string>
    <string name="fingerprint_phone">Take photo</string>
    <string name="fingerprint_msg">Manage and set fingerprint-related functions</string>
    <string name="fingerprint_phone_msg">From the viewfinder screen touch and hold the fingerprint sensor to take a photo</string>
    <string name="fingerprint_explain_msg">Note: These touch control  gestures can be performed with any finger and do not require a fingerprint to be enrolled</string>
    <string name="fingerprint_function">Fingerprint</string>
    <string name="fingerprint_touch">Touch control </string>
    <string name="fingerprint_call">Answer call</string>
    <string name="fingerprint_call_msg">Touch and hold the fingerprint senser to answer a call</string>
    <string name="ma_quick_lauch_app">Add Quick Launch</string>
</resources>