<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"     
    android:orientation="vertical" >

    <!-- 标题 -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:background="@color/lightgray"
        android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/ma_enroll_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >
            <ImageView
                android:id="@+id/ma_add_finger_logo"
                android:layout_width="24dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:background="@drawable/ic_ma_back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/ma_enroll_finger"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>
        <Button
            android:id="@+id/ma_enroll_cancel"
            android:layout_width="72dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:background="@color/lightgray"
            android:text="@string/ma_enroll_cancel"
            android:textColor="@color/blue"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"     
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/ma_enroll_lnlay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/ma_enroll_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ma_enroll_place"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/ma_enroll_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"             
                android:paddingTop="8dp"
                android:text="@string/ma_enroll_repeat"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="normal" />
             <TextView
                android:id="@+id/ma_enroll_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"             
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                android:text="@string/ma_enroll_go_on"
                android:textColor="@color/blue"
                android:visibility="invisible"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ma_enroll_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/ma_finger_view"
            android:layout_width="360dp"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_ma_finger_guide"
            android:scaleType="centerInside" />
    </RelativeLayout>

</LinearLayout>